--- a/CrawlingMobileBG/build.gradle
+++ b/CrawlingMobileBG/build.gradle
@@ -14,8 +14,13 @@ dependencies {
     implementation 'com.github.hazendaz.jsoup:jsoup:1.15.1'
     implementation 'org.jsoup:jsoup:1.16.1'
     implementation 'com.mysql:mysql-connector-j:8.1.0'
+    implementation 'org.mockito:mockito-testng:0.5.0'
+    implementation 'org.mockito:mockito-testng:0.5.0'
+    implementation 'org.mockito.kotlin:mockito-kotlin:5.0.0'
+    implementation 'org.powermock:powermock:1.6.6'
+    implementation 'org.powermock:powermock-module-testng:2.0.9'
     testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
 }
 
 test {
