--- a/SpringDemo/build.gradle
+++ b/SpringDemo/build.gradle
@@ -15,6 +15,8 @@ repositories {
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web')
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+    implementation ('org.springframework.boot:spring-boot-starter-security')
+    implementation ('org.springframework.security:spring-security-config:6.1.2')
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
