Car Ad Crawler for Mobile Bg using Spring Framework. Last stable version.

--- a/caradcrawler/src/main/resources/application.properties
+++ b/caradcrawler/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-
+# Thread management
 thread.count=5
+
+#URL management
 base.url=https://www.mobile.bg/pcgi/mobile.cgi?act=3&slink=tztn2s
