--- a/ocrexporter/src/main/resources/application.properties
+++ b/ocrexporter/src/main/resources/application.properties
@@ -1,4 +1,6 @@
+# API handling
 ocr.api.key=K86140142588957
+ocr.api.url=https://api.ocr.space/Parse/Image
 
 # Database Properties
 spring.datasource.url=jdbc:mysql://localhost:3306/ocrdb?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
