Broke down the single service class to multiple service classes to adhere to the Single Responsibility Principle better. Adjusted the service to use the application.properties instead of hardcoding the OCR API handling. Next up: tests, tests, tests...

--- a/ocrexporter/src/main/resources/application.properties
+++ b/ocrexporter/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 ocr.api.key=K86140142588957
+ocr.api.url=https://api.ocr.space/Parse/Image
 
 # Database Properties
 spring.datasource.url=jdbc:mysql://localhost:3306/ocrdb?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
