--- a/FlutterProjects/animated_bottom_nav/pubspec.yaml
+++ b/FlutterProjects/animated_bottom_nav/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   intl: ^0.18.1
   url_launcher: ^6.1.14
   http: ^1.1.0
+  logger: ^2.0.2+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
