--- a/FlutterProjects/animated_bottom_nav/pubspec.yaml
+++ b/FlutterProjects/animated_bottom_nav/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  geolocator: ^10.1.0
+  geocoding: ^2.1.1
+  lottie: ^2.6.0
 
 dev_dependencies:
   flutter_test:
@@ -60,11 +63,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - assets/Troll-icon.png
+    - assets/
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
