Added integration tests: testIsDatabaseEmpty() - The test asserts that the database should not be empty when the test runs.
testProcessPage() - The test ensures that the processPage() method of adsProcessorService correctly processes a page (in this case, the first page) without checking for duplicates and returns a list of ad listings that is both non-null and non-empty. If the method does not behave as expected, the test will fail, signaling that there might be an issue with the method's implementation.

testNoDuplicateAds() - The test ensures that when the processPage() method is instructed to check for duplicates (by setting checkForDuplicates to true), it correctly processes the page and returns a list of ad listings with no duplicates. If the method retrieves or processes duplicate ads despite the instruction to avoid them, the test will fail, signaling that there's an issue with the method's implementation or with the equals/hashCode methods of the AdListing class.

testValidAdListings() - This test ensures that all processed ad listings have a non-null title and a valid price value.

testAdsCountInDatabase() - This test ensures that new ad listings are added to the database after processing a page.

--- a/caradcrawler/src/test/resources/application-test.properties
+++ b/caradcrawler/src/test/resources/application-test.properties
@@ -1,4 +1,4 @@
-# Database configurations
+# Database configurations for testing
 spring.datasource.url=jdbc:mysql://localhost:3306/car_ads_db
 spring.datasource.username=root
 spring.datasource.password=databasepassword
@@ -11,5 +11,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # Thread management
 thread.count=5
 
-#URL management
+#URL management for testing (change if you have a different test URL)
 base.url=https://www.mobile.bg/pcgi/mobile.cgi?act=3&slink=ua1oe1
